# bs_model_instrument

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .templatesyncignore  HISTORY.rst  README.md  console.html  create_new_instrument.sh  demo.html  genindex.html  history.html  index.html  install.html  license.html  logging_config.html  notebook.html  objects.inv  py-modindex.html  pyproject.toml  qserver.html  script.html  search.html  searchindex.js  sessions.html
.github/disabled_workflows/: template-sync.yml
.github/scripts/: visualize.py
.github/workflows/: code.yml  docs.yml  init_repo.sh  init_repo.yml  pypi.yml  template-sync.yml
.nuanced/: nuanced-graph.json
_modules/: index.html
_modules/apsbits/core/: best_effort_init.html  catalog_init.html  run_engine_init.html
_modules/apsbits/utils/: aps_functions.html  config_loaders.html  controls_setup.html  helper_functions.html  logging_setup.html  metadata.html  stored_dict.html
_modules/instrument/callbacks/: nexus_data_file_writer.html  spec_data_file_writer.html
_modules/instrument/plans/: dm_plans.html  sim_plans.html
_modules/instrument/utils/: aps_functions.html  config_loaders.html  controls_setup.html  helper_functions.html  logging_setup.html  make_devices_yaml.html  metadata.html  stored_dict.html
_sources/: index.rst.txt  qserver.rst.txt
_sources/api/: demo_qserver.rst.txt  index.rst.txt
_sources/guides/: index.rst.txt  qserver_service.rst.txt  template_creation.rst.txt
_static/: documentation_options.js
api/: callbacks.html  configs.html  core.html  demo_instrument.html  demo_qserver.html  devices.html  index.html  plans.html  startup.html  utils.html
docs/: create_new_device.md  qserver_service.md  template_creation.md
docs/source/: bits_overview.rst  conf.py  console.rst  create_new_device.rst  demo.ipynb  history.rst  index.rst  install.rst  license.rst  notebook.rst  qserver.rst  qserver_service.rst  template_creation.rst
docs/source/api/: api.rst  configs.rst  core.rst  demo_instrument.rst  demo_qserver.rst  devices.rst  index.rst  utils.rst
docs/source/deprecated/: console.rst
docs/source/guides/: creating_devices.rst  creating_instrument.rst  developing_bits.rst  dm.md  index.rst  logging_config.rst  notebook.rst  qserver.rst  qserver_service.rst  sessions.rst  setting_iconfig.rst  template_creation.rst  template_sync.rst
guides/: dm.html  index.html  qserver_service.html  template_creation.html  template_sync.html
instrument/devices/: 123invalidname.py
src/: __init__.py  create_new_device.py
src/apsbits/: __init__.py
src/apsbits/.nuanced/: nuanced-graph.json
src/apsbits/api/: delete_instrument.py
src/apsbits/core/: __init__.py  best_effort_init.py  catalog_init.py  config.py  run_engine_init.py
src/apsbits/demo_instrument/: __init__.py  startup.py
src/apsbits/demo_qserver/: qs_host.sh
src/apsbits/tests/: conftest.py  test_config.py  test_create_new_device.py  test_delete_instrument.py  test_device_factories.py  test_general.py  test_run_instrument.py  test_stored_dict.py
src/apsbits/utils/: config_loaders.py  context_aware.py  controls_setup.py  create_new_device.py  create_new_instrument.py  delete_instrument.py  helper_functions.py  logging_setup.py  make_devices.py  make_devices_yaml.py  metadata.py  run_instrument.py  sim_creator.py  stored_dict.py
src/bits/: __init__.py
src/bits/callbacks/: nexus_data_file_writer.py  spec_data_file_writer.py
src/bits/core/: __init__.py  best_effort_init.py  catalog_init.py  init_instrument.py  run_engine_init.py
src/bits/demo_instrument/: __init__.py  startup.py
src/bits/tests/: conftest.py  test_device_factories.py  test_general.py  test_stored_dict.py
src/bits_instrument/: startup.py
src/demo_instrument/: startup.py
src/eric_instrument/: startup.py
src/instrument/: __init__.py  startup.py
tests/: __init__.py  test_create_new_device.py
(+54 files in other folders)
