[build-system]
requires = [ "setuptools>=64.0", "setuptools_scm[toml]>=8.0",]
build-backend = "setuptools.build_meta"

[project]
name = "bits"
dynamic = [ "version",]
description = "Model of a Bluesky Data Acquisition Instrument in console, notebook, & queueserver."
readme = "README.md"
requires-python = ">=3.11"
keywords = [ "bluesky", "queueserver",]
classifiers = [ "Development Status :: 6 - Mature", "Environment :: Console", "Intended Audience :: Developers", "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication", "License :: Freely Distributable", "License :: Public Domain", "Programming Language :: Python", "Programming Language :: Python :: 3", "Topic :: Utilities",]
dependencies = [ "apstools >= 1.7.2", "bluesky-queueserver-api", "bluesky-queueserver", "bluesky-widgets", "bluesky", "caproto", "databroker ==1.2.5", "guarneri", "ipython", "jupyterlab", "ophyd-registry", "ophyd", "PyQt5>5.15", "pyRestTable", "pysumreg", "qtpy", "toml",]
[[project.authors]]
name = "Eric Codrea"
email = "ecodrea@anl.gov"

[[project.authors]]
name = "Pete Jemian"
email = "prjemian+instrument@gmail.com"

[[project.authors]]
name = "Rafael Vescovi"
email = "rvescovi@anl.gov"

[[project.maintainers]]
name = "Eric Codrea"
email = "ecodrea@anl.gov"

[[project.maintainers]]
name = "Pete Jemian"
email = "prjemian+instrument@gmail.com"

[[project.maintainers]]
name = "Rafael Vescovi"
email = "rvescovi@anl.gov"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [ "build", "isort", "mypy", "pre-commit", "pytest", "ruff",]
doc = [ "babel", "ipykernel", "jinja2", "markupsafe", "myst_parser", "nbsphinx", "pydata-sphinx-theme", "pygments-ipython-console", "pygments", "sphinx-design", "sphinx-tabs", "sphinx",]
all = [ "bits[dev,doc]",]

[project.urls]
Homepage = "https://BCDA-APS.github.io/BITS/"
"Bug Tracker" = "https://github.com/BCDA-APS/BITS/issues"

[tool.copyright]
copyright = "2014-2025, APS"

[tool.black]
line-length = 115
target-version = [ "py311",]
include = "\\.pyi?$"
exclude = "(\n  /(\n      \\.eggs         # exclude a few common directories in the\n    | \\.git          # root of the project\n    | \\.hg\n    | \\.mypy_cache\n    | \\.tox\n    | \\.venv\n    | \\.pytest_cache\n    | _build\n    | build\n    | dist\n    | docs\n  )/\n)\n"

[tool.flake8]
max-line-length = 115
extend-ignore = [ "E203", "E402", "E501", "F401", "F405", "F722", "F811", "W503", "W504",]

[tool.isort]
force_single_line = true
line_length = 88
include_trailing_comma = true

[tool.ruff]
exclude = [ ".eggs", ".git", ".git-rewrite", ".mypy_cache", ".pytype", ".ruff_cache", ".tox", ".venv", "__pypackages__", "_build", "build", "dist", "venv", ".venv", "docs",]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.setuptools_scm]
write_to = "src/bits/_version.py"

[tool.ruff.lint]
select = [ "E", "F", "B", "I", "W", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",]
fixable = [ "ALL",]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = [ "--import-mode=importlib", "-x",]
junit_family = "xunit1"
filterwarnings = [ "ignore::DeprecationWarning", "ignore::PendingDeprecationWarning",]

[tool.setuptools.package-dir]
bits = "src/bits"

[tool.setuptools.package-data]
"*" = [ "*.yml",]

[tool.instruments.local_bits_instrument]
path = "src/local_bits_instrument"

[tool.instruments.eric_instrument]
path = "src/eric_instrument"

[tool.instruments.test_instrument]
path = "src/test_instrument"

[tool.instruments.hello_world]
path = "src/hello_world"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [ "F405",]

[tool.ruff.lint.isort]
force-single-line = true
